--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.vl{
+    height: 400px;
+    border-left: 2px solid black;
+}
+.avatar-img{
+    width: 40px;
+    border-radius: 50%;
+}
