--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,12 +19,15 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-8">
-            <div class="card">
+            <div class="card" *ngFor="let item of data" style="margin-bottom: 30px;">
                 <div style="margin: 10px;">
-                    <img src="{{ava}}" class="avatar-img" alt="avatar">
-                    <span class="card-title">Hello</span>
+                    <img src="{{item.avatar}}" class="avatar-img" alt="avatar">
+                    <span class="card-title">{{item.name}}</span>
                 </div>
-                <img src="{{ing}}" alt="faker image">
+                <img src="{{item.img}}" alt="faker image">
+                <div class="card-body">
+                    <p>{{item.com}}</p>
+                </div>
             </div>
         </div>
         <div class="col-sm-4">
