--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -17,6 +17,10 @@
 </div>
 <hr>
 <div class="container">
+    <button [routerLink]="['/post']" style="margin-left: 45%;" class="btn btn-primary">New Post</button>
+    <br>
+</div><br>
+<div class="container">
     <div class="row">
         <div class="col-sm-8">
             <div class="card" *ngFor="let item of data" style="margin-bottom: 30px;">
