--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -23,14 +23,19 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-8">
-            <div class="card" *ngFor="let item of data" style="margin-bottom: 30px;">
+            <div class="card" *ngFor="let item of posts; let i=index" style="margin-bottom: 30px;">
                 <div style="margin: 10px;">
-                    <img src="{{item.avatar}}" class="avatar-img" alt="avatar">
-                    <span class="card-title">{{item.name}}</span>
+                    <img src="{{item.avatar}}" class="avatar-img" alt="avatar"> &nbsp;&nbsp;
+                    <span class="card-title"><b>{{item.postedBy | titlecase}}</b></span>
                 </div>
-                <img src="{{item.img}}" alt="faker image">
+                <img src="{{item.img}}" style="max-height: 500px;" alt="faker image">
+                <div>
+                    <i (click)="like(i)" class="btn fa fa-heart fa-2x icon"></i><i class="fa fa-share fa-2x icon"></i>
+                    <i class="fa fa-comment fa-2x icon"></i><i class="fa fa-bookmark fa-2x align-right"></i><br>
+                    <span style="padding-left: 20px;">{{item.like}} Likes</span>        
+                </div>
                 <div class="card-body">
-                    <p>{{item.com}}</p>
+                    <p><b>{{item.postedBy | titlecase}}</b>{{item.desc}}</p>
                 </div>
             </div>
         </div>
