--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,4 +1,22 @@
-<br>
+<div class="container">
+    <div class="row" style="margin: 20px;">
+        <div class="col-sm">
+            <i class="fa fa-instagram fa-2x"></i>&nbsp;
+            <span class="vl"></span>&nbsp;
+            <b><i style="font-size: 25px;"> Instagram</i></b>
+        </div>
+        <div class="col-sm">
+            <input type="text" placeholder="Search">
+        </div>
+        <div class="col-sm">
+            <i class="fa fa-compass fa-2x"></i>&nbsp;&nbsp;&nbsp;
+            <i class="fa fa-heart fa-2x"></i>&nbsp;&nbsp;&nbsp;
+            <i [routerLink]="['/profile']" class="fa fa-user fa-2x"></i>&nbsp;&nbsp;&nbsp;
+        </div>
+    </div>
+</div>
+<hr>
+
 <div class="container">
     <div class="card" style="margin-left: 20%;margin-right: 20%;">
         <h5 class="card-title">Create Post</h5>
@@ -25,4 +43,11 @@
             </form>
         </div>
     </div>
+</div>
+<br>
+<div style="background-color: #f3f3f3; padding-top: 30px;" class="d-flex justify-content-center">
+    <p>ABOUT US &nbsp;&nbsp;&nbsp; SUPPORT &nbsp;&nbsp;&nbsp; PRESS &nbsp;&nbsp;&nbsp; API &nbsp;&nbsp;&nbsp;
+        JOBS &nbsp;&nbsp;&nbsp; PRIVACY &nbsp;&nbsp;&nbsp; TERMS &nbsp;&nbsp;&nbsp; DIRECTORY &nbsp;&nbsp;&nbsp;
+        PROFILES &nbsp;&nbsp;&nbsp; HASHTAGS &nbsp;&nbsp;&nbsp; LANGUAGE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        © 2019 INSTAGRAM FROM FACEBOOK</p>
 </div>
