password & photo update

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row" style="margin: 20px;">
-        <div class="col-sm">
+        <div class="col-sm" [routerLink] = "['/dashboard']">
             <i class="fa fa-instagram fa-2x"></i>&nbsp;
             <span class="vl"></span>&nbsp;
             <b><i style="font-size: 25px;"> Instagram</i></b>
