--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -14,10 +14,33 @@
     </div>
     <form style="margin: auto;" novalidate [formGroup]="signupForm" (ngSubmit)="signup()">
         <input class="input-style form-control" formControlName="email" type="text" placeholder="Email"><br>
+        <div *ngIf="signupForm.get('email').touched">
+            <span *ngIf="signupForm.get('email').hasError('required')" class="alert alert-danger">Email is
+                required</span>
+            <span *ngIf="signupForm.get('email').hasError('email')" class="alert alert-danger">Email is not in right
+                format</span>
+        </div>
         <input class="input-style form-control" formControlName="name" type="text" placeholder="Full Name"><br>
-        <input class="input-style form-control" formControlName="number" type="text" placeholder="Phone number"><br>
+        <div *ngIf="signupForm.get('name').touched">
+            <span *ngIf="signupForm.get('name').hasError('required')" class="alert alert-danger">Name is
+                required</span>
+            <span *ngIf="signupForm.get('name').hasError('minlength')" class="alert alert-danger">min 4 char</span>
+        </div>
+        <input class="input-style form-control" formControlName="number" type="number" placeholder="Phone number"><br>
+        <div *ngIf="signupForm.get('number').touched">
+            <span *ngIf="signupForm.get('number').hasError('required')" class="alert alert-danger">Number is
+                required</span>
+            <span *ngIf="signupForm.get('number').hasError('minlength')" class="alert alert-danger">min 10 digit</span>
+        </div>
         <input class="input-style form-control" formControlName="password" type="password" placeholder="Password"><br>
-        <button type="submit" [disabled]="!signupForm.valid" class="btn btn-primary" style="width: 100%;">Sign up</button>
+        <div *ngIf="signupForm.get('password').touched">
+            <span *ngIf="signupForm.get('password').hasError('required')" class="alert alert-danger">Password is
+                required</span>
+            <span *ngIf="signupForm.get('password').hasError('minlength')" class="alert alert-danger">min 8 char</span>
+        </div>
+        <button type="submit" [disabled]="!signupForm.valid" class="btn btn-primary" style="width: 100%;">Sign
+            up</button>
+        <div *ngIf="dataReturned.status" class="alert alert-danger">{{dataReturned.msg}}</div>
     </form><br>
     <p>By signing up, you agree to our Terms , Data Policy and Cookies Policy .</p>
 </div>
