--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div>
     <h6 style="margin: auto;">Sign up to see photos and videos <br> from your friends</h6><br>
-    <button class="btn btn-primary" style="width: 100%;">Log in with Facebook</button><br>
+    <button class="btn btn-primary" style="width: 100%;" (click)="facebook()">Log in with Facebook</button><br>
     <div class="row" style="margin-top: 10px;margin-bottom: 10px;">
         <div class="col-sm-5">
             <hr>
