--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -42,6 +42,7 @@
                     <input class="form-control" type="text" id="comment">&nbsp;&nbsp;&nbsp;
                     <button type="button" class="btn btn-primary" (click)="addComment(item._id)">Post</button>
                 </form>
+                <div id="snackbar">Comment posted</div>
             </div>
         </div>
         <div class="col-sm-4" style="background-color: aliceblue;">
