--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -56,7 +56,7 @@
                 <div *ngFor="let user of users">
                     <img src="{{user.avatar}}" class="avatar-img" alt="avatar"> &nbsp;&nbsp;
                     <span class="card-title"><b><i>{{user.name | titlecase}}</i></b></span>
-                    <button type="button" class="align-right btn btn-primary">Follow</button>
+                    <button type="button" class="align-right btn btn-primary" (click)="follow(user.id, user.status)">{{user.status}}</button>
                 </div>
             </div>
         </div>
