--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -23,32 +23,33 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-8">
-            <div class="card" *ngFor="let item of allPost.posts; let i=index" style="margin-bottom: 30px;">
+            <div class="card" *ngFor="let post of allPost" style="margin-bottom: 30px;">
                 <div style="margin: 10px;">
-                    <img src="{{allPost.avatar}}" class="avatar-img" alt="avatar"> &nbsp;&nbsp;
-                    <span class="card-title"><b>{{allPost.name | titlecase}}</b></span>
+                    <img src="{{post.avatar}}" class="avatar-img" alt="avatar"> &nbsp;&nbsp;
+                    <span class="card-title"><b>{{post.name | titlecase}}</b></span>
                 </div>
-                <img src="{{item.img}}" style="max-height: 500px;" alt="faker image">
+                <img src="{{post.img}}" style="max-height: 500px;" alt="faker image">
                 <div>
-                    <i (click)="like(i)" class="btn fa fa-heart fa-2x icon"></i><i class="fa fa-share fa-2x icon"></i>
+                    <i (click)="like(post._id, post.liked)" [style.color]="post.liked ? 'red' : ''" class="btn fa fa-heart fa-2x icon"></i>
+                    <i class="fa fa-share fa-2x icon"></i>
                     <i class="fa fa-comment fa-2x icon"></i><i class="fa fa-bookmark fa-2x align-right"></i><br>
-                    <span style="padding-left: 20px;">{{item.liked}} Likes</span>
+                    <span style="padding-left: 20px;">{{post.totalLike}} Likes</span>
                 </div>
                 <div class="card-body" style="margin-bottom: 0px;padding-bottom: 0px;">
-                    <p><b>{{allPost.name | titlecase}}</b> : {{item.desc}} <br>{{(item.comments).length}} Comments</p>
+                    <p><b>{{post.name | titlecase}}</b> : {{post.desc}} <br>{{(post.comments).length}} Comments</p>
                 </div>
                 <form class="form-inline" style="margin: 10px;">
                     <label for="comment"><b>Comment : </b></label>&nbsp;&nbsp;&nbsp;
                     <input class="form-control" type="text" id="comment">&nbsp;&nbsp;&nbsp;
-                    <button type="button" class="btn btn-primary" (click)="addComment(item._id)">Post</button>
+                    <button type="button" class="btn btn-primary" (click)="addComment(post._id)">Post</button>
                 </form>
                 <div id="snackbar">Comment posted</div>
             </div>
         </div>
         <div class="col-sm-4" style="background-color: aliceblue;">
             <div style="margin: 10px;" [routerLink]="['/profile']">
-                <img src="{{allPost.avatar}}" class="avatar-img" alt="avatar"> &nbsp;&nbsp;
-                <span class="card-title"><b><i>{{allPost.name | titlecase}}</i></b></span>
+                <img src="{{currentUser.img}}" class="avatar-img" alt="avatar"> &nbsp;&nbsp;
+                <span class="card-title"><b><i>{{currentUser.name | titlecase}}</i></b></span>
             </div>
             <hr>
             <div >
