--- a/src/app/post-detail/post-detail.component.html
+++ b/src/app/post-detail/post-detail.component.html
@@ -1,1 +1,50 @@
-<p>post-detail works!</p>
+<div class="container">
+    <div class="row" style="margin: 20px;">
+        <div class="col-sm">
+            <i class="fa fa-instagram fa-2x"></i>&nbsp;
+            <span class="vl"></span>&nbsp;
+            <b><i style="font-size: 25px;"> Instagram</i></b>
+        </div>
+        <div class="col-sm">
+            <input type="text" placeholder="Search">
+        </div>
+        <div class="col-sm">
+            <i class="fa fa-compass fa-2x"></i>&nbsp;&nbsp;&nbsp;
+            <i class="fa fa-heart fa-2x"></i>&nbsp;&nbsp;&nbsp;
+            <i [routerLink]="['/profile']" class="fa fa-user fa-2x"></i>&nbsp;&nbsp;&nbsp;
+        </div>
+    </div>
+</div>
+<hr>
+
+<div class="card">
+    <div class="container">
+        <div class="row">
+            <div class="col-8">
+                <img src="{{postDetail.img}}" alt="{{postDetail.name}}" style="width: 100%;height: 100%;" class="img-fluid">
+            </div>
+            <div class="col-4" style="padding: 10px;">
+                <div style="height: 10%;">
+                    <img src="{{postDetail.avatar}}" class="avatar-img" alt="{{postDetail.name}}">
+                    <span><b><i>{{postDetail.name | titlecase}}</i></b></span>
+                    <p>{{postDetail.name | titlecase}}: {{postDetail.desc}}</p>
+                </div>
+                <div style="height: 60%;">
+                    <div *ngFor="let com of postDetail.comment">
+                        {{com}}
+                    </div>
+                </div>
+                <div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div style="background-color: #f3f3f3; padding-top: 30px;" class="d-flex justify-content-center">
+    <p>ABOUT US &nbsp;&nbsp;&nbsp; SUPPORT &nbsp;&nbsp;&nbsp; PRESS &nbsp;&nbsp;&nbsp; API &nbsp;&nbsp;&nbsp;
+        JOBS &nbsp;&nbsp;&nbsp; PRIVACY &nbsp;&nbsp;&nbsp; TERMS &nbsp;&nbsp;&nbsp; DIRECTORY &nbsp;&nbsp;&nbsp;
+        PROFILES &nbsp;&nbsp;&nbsp; HASHTAGS &nbsp;&nbsp;&nbsp; LANGUAGE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        © 2019 INSTAGRAM FROM FACEBOOK</p>
+</div>
