--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="row" style="margin-top: 20px;">
         <div class="col-sm-6">
             <div class="card">
-                <img class="img-fluid" style="height: 700px;" src="assets/images/homepage.jpg" alt="homepage">
+                <img class="img-fluid" style="height: 700px;" src="{{img.img}}" alt="homepage">
             </div>
         </div>
         <div class="col-sm-4">
